Fix spacing of degree years on mobile

--- a/kressner-cv.css
+++ b/kressner-cv.css
@@ -123,9 +123,9 @@ dd {
   dt {
       float: left;
       clear: left;
-      width: 25px;
+      width: 50px;
   }
   dd {
-      margin-left: 35px;
+      margin-left: 55px;
   }
 }
